kubernetes/postgresql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  labels:
    name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres-db
  template:
    metadata:
      labels:
        service: postgres-db
    spec:
      containers:
        - image: postgres:14.2
          imagePullPolicy: Always
          name: postgres
          ports:
            - containerPort: 5432
