kubernetes/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    name: postgres-service
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    service: postgres-db
