kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: kf-api
  ports:
    - protocol: "TCP"
      port: 6379
      targetPort: 6379
  type: ClusterIP
