kubernetes/test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-server-service
spec:
  selector:
    app: kf-api
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
  type: ClusterIP
